--- a/etc/nginx/conf.d/local.hayhouse.com.conf
+++ b/etc/nginx/conf.d/local.hayhouse.com.conf
@@ -9,6 +9,9 @@ server {
                 try_files $uri $uri/ /index.php?$query_string;
         }
 
+        # file upload max size
+	    client_max_body_size 6M;
+
         location ~ \.php$ {
                 try_files $uri  /index.php =404;
                 fastcgi_index   index.php;
@@ -22,5 +25,6 @@ server {
 
                 fastcgi_pass    php-fpm:9000;
                 include         fastcgi_params;
+
         }
 }
