--- a/etc/nginx/conf.d/local.conf
+++ b/etc/nginx/conf.d/local.conf
@@ -1,8 +1,8 @@
 server {
         listen  80;
-        server_name local.hayhouse.com.au;
+        server_name local.dev;
 
-        root /var/www/vhosts/hayhouse-magento/httpdocs/;
+        root /var/www/vhosts/local/public/;
         index index.php;
 
         location / {
@@ -13,13 +13,6 @@ server {
                 try_files $uri  /index.php =404;
                 fastcgi_index   index.php;
                 fastcgi_param   SCRIPT_FILENAME $document_root$fastcgi_script_name;
-
-                fastcgi_param APPLICATION_ENV development;
-                fastcgi_param KOHANA_ENV development;
-                fastcgi_param STAGE local;
-                fastcgi_param MAGE_RUN_CODE hhau;
-                fastcgi_param MAGE_RUN_TYPE store;
-
                 fastcgi_pass    php-fpm:9000;
                 include         fastcgi_params;
         }
